# libmypaint

./: CMakeLists.txt  vcpkg.json
brushes/: README.md
examples/: minimal.c
include/: mypaint-brush.h  mypaint-fixed-tiled-surface.h  mypaint-surface.h
nccademos/: CMakeLists.txt
nccademos/QtPaint/: CMakeLists.txt
nccademos/QtPaint/include/: MainWindow.h  NGLScene.h  Paint.h
nccademos/QtPaint/shaders/: ScreenTriVertex.glsl
nccademos/QtPaint/src/: MainWindow.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  Paint.cpp
nccademos/QtPaint/ui/: MainWindow.ui
nccademos/RandomBrush/: CMakeLists.txt
nccademos/RandomBrush/src/: main.cpp  writeppm.cpp
src/: mypaint-brush.c  mypaint-fixed-tiled-surface.c  mypaint-surface.c  mypaint-tiled-surface.c  mypaint.c  rng-double.c
